update outline bab 3

--- a/bab3-desain.tex
+++ b/bab3-desain.tex
@@ -3,7 +3,7 @@
 %-----------------------------------------------------------------------------%
 
 %-----------------------------------------------------------------------------%
-\section{NPACI Rocks}
+\section{Desain Sistem}
 %-----------------------------------------------------------------------------%
 
 %-----------------------------------------------------------------------------%
@@ -44,7 +44,7 @@ Untuk contoh konten Rolls dapat dilihat pada gambar \ref{fig:contohisiroll}. Pad
 COde-like words : \code{FIRSTFIT} atau \code{BESTFIT} \citep{paper.jackson}. 
 
 %-----------------------------------------------------------------------------%
-\section{Mengubah Tampilan Teks}
+\section{Desain \f{Bussiness Logic}}
 %-----------------------------------------------------------------------------%
 Beberapa perintah yang dapat digunakan untuk mengubah tampilan adalah: 
 \begin{itemize}
@@ -59,23 +59,18 @@ Beberapa perintah yang dapat digunakan untuk mengubah tampilan adalah:
 		\code{Contoh hasil tulisan}.
 \end{itemize}
 
-
 %-----------------------------------------------------------------------------%
-\section{Memberikan Catatan}
+\section{Desain \f{Rules}}
 %-----------------------------------------------------------------------------%
-Ada dua perintah untuk memberikan catatan penulisan dalam dokumen yang Anda 
-kerjakan, yaitu: 
+Beberapa perintah yang dapat digunakan untuk mengubah tampilan adalah: 
 \begin{itemize}
-	\item \bslash todo \\
-		Contoh: \\ \todo{Contoh bentuk todo.}
-	\item \bslash todoCite \\ 
-		Contoh: \todoCite
+	\item \bslash f \\
+		Merupakan alias untuk perintah \bslash textit, contoh 
+		\f{contoh hasil tulisan}.
+	\item \bslash bi \\
+		\bi{Contoh hasil tulisan}.
+	\item \bslash bo \\
+		\bo{Contoh hasil tulisan}.
+	\item \bslash code \\ 
+		\code{Contoh hasil tulisan}.
 \end{itemize}
-
-
-%-----------------------------------------------------------------------------%
-\section{Menambah Isi Daftar Isi}
-%-----------------------------------------------------------------------------%
-Terkadang ada kebutuhan untuk memasukan kata-kata tertentu kedalam Daftar Isi. 
-Perintah \bslash addChapter dapat digunakan untuk judul bab dalam Daftar isi. 
-Contohnya dapat dilihat pada berkas thesis.tex.
