bab 3, 3.1 on progress

--- a/bab3-desain.tex
+++ b/bab3-desain.tex
@@ -6,42 +6,16 @@
 \section{Desain Sistem}
 %-----------------------------------------------------------------------------%
 
-%-----------------------------------------------------------------------------%
-\subsection{XZXX}
-%-----------------------------------------------------------------------------%
-Ini dapat dilihat di Gambar \ref{fig:alurkickstart} \citep{paper.jackson}. 
+Untuk dapat menghasilkan program sesuai tujuan, maka perlu dilakukan desain mengenai sistem secara keseluruhan. Sesuai dengan tujuan dari program yang akan menghubungkan antara Zotonic dan \textit{web service} yang dihasilkan oleh ABS \textit{mircoservice} maka diperlukan sebuah \textit{script} pada Zotonic untuk menghubungkan keduanya.
 
 \begin{figure}
 	\centering
-	\includegraphics[width=0.8\textwidth,height=0.7\textwidth]
-		{pics/alurkickstart.pdf}
-	\caption{Alur Perjalanan \f{Kickstart}}
-	\label{fig:alurkickstart}
+	\includegraphics[width=1\textwidth]
+		{pics/skripsiRoadmap.jpg}
+	\caption{Desain sistem secara keseluruhan}
+	\label{fig:skripsiroadmap}
 \end{figure}
-\begin{center}
-{\small Sumber gambar: \citep{paper.jackson}}
-\end{center}
-
-Kata-kata dalam gambarnya bisa di hover, magic!!
-
-%-----------------------------------------------------------------------------%
-\subsection{Rocks Rolls}
-%-----------------------------------------------------------------------------%
-Untuk contoh konten Rolls dapat dilihat pada gambar \ref{fig:contohisiroll}. Pada contoh tersebut, \f{package} yang mengandung konfigurasi \f{graph} adalah berkas \co{roll-sge-kickstart-3.2.0-0.noarch.rpm} \citep{paper.jackson}. 
-
-
-\begin{figure}
-	\centering
-	\includegraphics[width=0.9\textwidth,height=0.6\textwidth]
-		{pics/rollexample.pdf}
-	\caption{Contoh konten yang berada dalam \f{Rolls}}
-	\label{fig:contohisiroll}
-\end{figure}
-\begin{center}
-{\small Sumber gambar: \citep{paper.jackson}}
-\end{center}
-
-COde-like words : \code{FIRSTFIT} atau \code{BESTFIT} \citep{paper.jackson}. 
+\vspace{-0.8cm}
 
 %-----------------------------------------------------------------------------%
 \section{Desain \f{Bussiness Logic}}
