--- a/abstrak.tex
+++ b/abstrak.tex
@@ -23,6 +23,6 @@
 \vspace*{0.2cm}
 
 \noindent Kata Kunci: \\ 
-\noindent atu, dua, \textit{tiga}\\ 
+\noindent ABS, Adaptor, SPL, \textit{Web Service}, Zotonic\\ 
 
 \newpage
