--- a/laporan_setting.tex
+++ b/laporan_setting.tex
@@ -3,13 +3,13 @@
 %-----------------------------------------------------------------------------%
 % 
 % Judul laporan. 
-\var{\judul}{Pembentukan Web}
+\var{\judul}{Pengembangan Program Integrasi Ontologi dan \textit{Web Services} pada Zotonic}
 % 
 % Tulis kembali judul laporan, kali ini akan diubah menjadi huruf kapital
-\Var{\Judul}{JUDUL SESUATU BANGET \f{ENGLISH} MIRING JUGA}
+\Var{\Judul}{PENGEMBANGAN PROGRAM INTEGRASI ONTOLOGI DAN \textit{WEB SERVICES} PADA ZOTONIC}
 % 
 % Tulis kembali judul laporan namun dengan bahasa Ingris
-\var{\judulInggris}{Sesuatu Banget in English}
+\var{\judulInggris}{Development of Ontology and Web Services Integration Program on Zotonic}
 
 % 
 % Tipe laporan, dapat berisi Skripsi, Tugas Akhir, Thesis, atau Disertasi
@@ -66,7 +66,7 @@
 \Var{\kataPengantar}{Kata Pengantar}
 \Var{\babSatu}{Pendahuluan}
 \Var{\babDua}{Tinjauan Pustaka}
-\Var{\babTiga}{Desain}
+\Var{\babTiga}{Rancangan}
 \Var{\babEmpat}{Implementasi}
 \Var{\babLima}{Hasil}
 \Var{\babEnam}{Penutup}
