--- a/skripsi.tex
+++ b/skripsi.tex
@@ -100,7 +100,7 @@
 \onehalfspacing
 \include{bab1-pendahuluan}
 \include{bab2-tinjauan-pustaka}
-\include{bab3-desain}
+\include{bab3-rancangan}
 \include{bab4-implementasi}
 \include{bab5-hasil}
 \include{bab6-penutup}
