--- a/bab4-implementasi.tex
+++ b/bab4-implementasi.tex
@@ -2,8 +2,76 @@
 \chapter{\babEmpat}
 %-----------------------------------------------------------------------------%
 %-----------------------------------------------------------------------------%
-\section{Instalasi Zotonic}
+\section{Implementasi \textit{Adaptor}}
 %-----------------------------------------------------------------------------%
+Sebelum melakukan implementasi \textit{adaptor}, perlu dibuat terlebih dahulu tabel \textit{rules} yang akan dibaca oleh \textit{adaptor}. Namun, karena belum adanya mekanisme pemetaan secara langsung dari \textit{rules} yang dimiliki oleh ontologi ke dalam tabel \textit{rules} maka penulis membuat tabel \textit{rules} secara manual. Tabel \textit{rules} tersebut berbentuk \textit{json} dimana strukturnya sebagai berikut
+
+\begin{minipage}{\linewidth}
+\begin{lstlisting}[caption={Struktur tabel \textit{rules}},label={lst:strukturtablerules}]
+{
+	nama fungsi : [endpoint, jumlah parameter]
+}
+\end{lstlisting}
+\end{minipage}
+
+Setelah tabel rules selesai dibuat sesuai dengan struktur pada kode \ref{lst:strukturtablerules}, tabel rules tersebut disimpan ke dalam sebuah file yang bernama rules.txt dan ditaruh pada \textit{root} dari zotonic. Untuk dapat menjalankan fungsi \textit{adaptor} yang diinginkan, penulis membuat sebuah model baru pada zotonic dengan nama model abs. Untuk membuat sebuah model pada zotonic, zotonic mengharuskan setiap model untuk mengekspor beberapa fungsi yang dimiliki oleh zotonic yaitu fungsi model find value, model to list, dan model value agar fungsi tersebut dapat digunakan melalui \textit{template engine}.
+
+\begin{minipage}{\linewidth}
+\begin{lstlisting}[caption={Fungsi yang harus diekspor untuk model},label={lst:librarymodel}]
+-export([
+	m_find_value/3,
+	m_to_list/2,
+	m_value/2,
+]).
+\end{lstlisting}
+\end{minipage}
+
+Seperti yang dapat dilihat pada kode \ref{lst:librarymodel}, agar fungsi tersebut dapat dijalankan pada \textit{template engine}, tentu harus diimplementasi sesuai dengan kebutuhan.
+
+\begin{minipage}{\linewidth}
+\begin{lstlisting}[caption={Implementasi fungsi m find value},label={lst:mfindvalue}]
+% this method to handle call api from template
+-spec m_find_value(Key, Source, Context) -> #m{} | undefined | any() when
+    Key:: integer() | atom() | string(),
+    Source:: #m{},
+    Context:: #context{}.
+
+m_find_value(Type, #m{value=undefined} = M, _Context) ->
+    M#m{value=[Type]};
+
+m_find_value({query, Query}, #m{value=Q} = _, _Context) when is_list(Q) ->
+	[Key] = Q,
+	[Url, Param] = lookup_rules(Key),
+	case validate_params(Param, Query) of
+		false ->
+			[{error, "Num of Params not same"}];
+		true ->
+			{DecodeJson} = fetch_data(binary_to_list(Url), jiffy:encode({Query})),
+			lager:info("ABS result : ~p", [DecodeJson]),
+			proplists:get_value(<<"data">>, DecodeJson)
+	end;
+
+% Other values won't be processed
+m_find_value(_, _, _Context) ->
+    undefined. 
+\end{lstlisting}
+\end{minipage}
+
+Ketika model abs dijalankan pada sisi \textit{template engine}, model abs akan melakukan pencocokan \textit{pola} terhadap pemanggilan model abs pada \textit{template engine}. Untuk melakukan pencocokan pola ini, penulis memanfaatkan fungsi model find value yang telah disediakan oleh zotonic.
+
+\begin{minipage}{\linewidth}
+\begin{lstlisting}[caption={Implementasi fungsi m to list},label={lst:mtolist}]
+m_to_list(_, _Context) ->
+[].
+\end{lstlisting}
+\end{minipage}
+
+\begin{minipage}{\linewidth}
+\begin{lstlisting}[caption={Implementasi fungsi m value},label={lst:mvalue}]
+m_value(_, _Context) ->
+undefined.
+\end{lstlisting}
+\end{minipage}
 Seperti pada gambar, tabel juga dapat diberi label dan caption. 
 Caption pada tabel terletak pada bagian atas tabel. 
 Contoh tabel sederhana dapat dilihat pada \tab~\ref{tab:tab1}.
@@ -85,7 +153,7 @@ Contoh-contoh ini bersumber dari
 \end{table}
 
 %-----------------------------------------------------------------------------%
-\section{Pembuatan Situs baru dengan Zotonic}
+\section{Implementasi \textit{Refactoring Business Logic}}
 %-----------------------------------------------------------------------------%
 Berkas ini berisi seluruh berkas Latex yang dibaca, jadi bisa dikatakan sebagai 
 berkas utama. Dari berkas ini kita dapat mengatur bab apa saja yang ingin 
