--- a/laporan_setting.tex
+++ b/laporan_setting.tex
@@ -53,7 +53,7 @@
 % Tuliskan pembimbing 
 \var{\pembimbing}{Dr. Ade Azurat}
 % 
-% Alias untuk memudahkan alur penulisan paa saat menulis laporan
+% Alias untuk memudahkan alur penulisan pas saat menulis laporan
 \var{\saya}{Penulis}
 
 %-----------------------------------------------------------------------------%
